# RD-Minecraft-Tools

./: .flake8  .gitignore  CONFIG_PATHS.md  LICENSE  PLAN.md  README.md  REFACTOR_PLAN.md  builder.py  categorize_blocks_items.py  clean_cache.ps1  finder.py  pyproject.toml  pytest.ini  requirements.txt  scan_mods_blocks_items.py  scan_mods_recipes_dynamic.py  scanner.py
config/: README.md  black.yaml  flake8.yaml  mypy.yaml  paths.json  paths.json.example  pytest.ini  pytest.yaml
core/: __init__.py  constants.py
core/builder/: __init__.py  models.py  ui.py
core/finder/: __init__.py  output.py
core/scanner/: __init__.py  categorize.py  mods.py  output.py  process.py  recipes.py  tags.py
core/utils/: __init__.py  cli.py  file.py  format.py  (+5 more)
docs/: ARCHITECTURE.md  USAGE.md  codebase.md
exstraction_examples/: dust_types_examples.md  non dusts exclusion.md  non wood types exclusion.md  ore types exclusion.md  stone_finding_example.md  wood types detection.md
src/: __init__.py  affix_cleaner.py  arg_parser.py  config_loader.py  datapack_generator.py  file_operations.py  identifier_cleaner.py  jar_processor.py  matcher_base.py  matcher_common.py  scanner_common.py  thread_pool.py  utils.py
tests/: __init__.py  test_arg_parser.py  test_asset_scanner.py  test_block_matcher.py  test_items_matcher.py  test_jar_processor.py  test_models.py  test_processors.py  test_recipe_scanner.py  test_services.py  test_thread_pool.py  test_utils.py
tools/: __init__.py  asset_scanner.py  block_matcher.py  docker_builder.py  fluid_matcher.py  items_matcher.py  recipe_scanner.py
(+4879 files in other folders)
